--- a/content/resources/mit6_011s10_chap03.md
+++ b/content/resources/mit6_011s10_chap03.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information about transform representation of
   signals and LTI systems.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/7fe9f08b4f0050cacf664236b2620e58_MIT6_011S10_chap03.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/7fe9f08b4f0050cacf664236b2620e58_MIT6_011S10_chap03.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_chap03.pdf
 uid: 7fe9f08b-4f00-50ca-cf66-4236b2620e58
