--- a/content/resources/mit6_011s10_chap04.md
+++ b/content/resources/mit6_011s10_chap04.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information about state-space models.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/0009cae26d5218d6ebae14297d111325_MIT6_011S10_chap04.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/0009cae26d5218d6ebae14297d111325_MIT6_011S10_chap04.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_chap04.pdf
 uid: 0009cae2-6d52-18d6-ebae-14297d111325
