--- a/content/resources/mit6_011s10_chap06.md
+++ b/content/resources/mit6_011s10_chap06.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information about state observers and state feedback.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/205766623e6e6edc42f9b6d129f18d30_MIT6_011S10_chap06.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/205766623e6e6edc42f9b6d129f18d30_MIT6_011S10_chap06.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_chap06.pdf
 uid: 20576662-3e6e-6edc-42f9-b6d129f18d30
