--- a/content/resources/mit6_011s10_chap09.md
+++ b/content/resources/mit6_011s10_chap09.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information about random processes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f240d88581626352c6a17eb2872504aa_MIT6_011S10_chap09.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f240d88581626352c6a17eb2872504aa_MIT6_011S10_chap09.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_chap09.pdf
 uid: f240d885-8162-6352-c6a1-7eb2872504aa
