--- a/content/resources/mit6_011s10_chap11.md
+++ b/content/resources/mit6_011s10_chap11.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information about wiener filtering.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f135b328c7448bf21c4939ea9ff8f8fb_MIT6_011S10_chap11.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f135b328c7448bf21c4939ea9ff8f8fb_MIT6_011S10_chap11.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_chap11.pdf
 uid: f135b328-c744-8bf2-1c49-39ea9ff8f8fb
