--- a/content/resources/mit6_011s10_chap13.md
+++ b/content/resources/mit6_011s10_chap13.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information about hypothesis testing.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/a28fcd60540c02d8f9040e97cf58c151_MIT6_011S10_chap13.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/a28fcd60540c02d8f9040e97cf58c151_MIT6_011S10_chap13.pdf
 file_type: application/pdf
+learning_resource_types:
+- Readings
+ocw_type: OCWFile
+parent_title: Readings
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_chap13.pdf
 uid: a28fcd60-540c-02d8-f904-0e97cf58c151
