--- a/content/resources/mit6_011s10_quiz01.md
+++ b/content/resources/mit6_011s10_quiz01.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contains question booklet of quiz 1. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2e3078bdd580246ce1ea9401e721ff88_MIT6_011S10_quiz01.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2e3078bdd580246ce1ea9401e721ff88_MIT6_011S10_quiz01.pdf
 file_type: application/pdf
+learning_resource_types:
+- Exams
+ocw_type: OCWFile
+parent_title: Exams
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_quiz01.pdf
 uid: 2e3078bd-d580-246c-e1ea-9401e721ff88
