--- a/content/resources/mit6_011s10_quiz02.md
+++ b/content/resources/mit6_011s10_quiz02.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contains question booklet of quiz 2. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f011879b6b76d8e7cdd9c26ab62029ae_MIT6_011S10_quiz02.pdf
+file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f011879b6b76d8e7cdd9c26ab62029ae_MIT6_011S10_quiz02.pdf
 file_type: application/pdf
+learning_resource_types:
+- Exams
+ocw_type: OCWFile
+parent_title: Exams
+parent_type: CourseSection
 resourcetype: Document
 title: MIT6_011S10_quiz02.pdf
 uid: f011879b-6b76-d8e7-cdd9-c26ab62029ae
