Sync all content

--- a/content/resources/mit6_011s10_chap03.md
+++ b/content/resources/mit6_011s10_chap03.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: acd6b33e-f9a8-3af7-53fb-5db7d566d89a
 resourcetype: Document
 title: MIT6_011S10_chap03.pdf
 uid: 7fe9f08b-4f00-50ca-cf66-4236b2620e58
