--- a/content/resources/mit6_011s10_chap10.md
+++ b/content/resources/mit6_011s10_chap10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: acd6b33e-f9a8-3af7-53fb-5db7d566d89a
 resourcetype: Document
 title: MIT6_011S10_chap10.pdf
 uid: 80750411-84d5-6610-3ce7-c3f69afc5e75
