--- a/content/resources/mit6_011s10_chap05.md
+++ b/content/resources/mit6_011s10_chap05.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: acd6b33e-f9a8-3af7-53fb-5db7d566d89a
 resourcetype: Document
 title: MIT6_011S10_chap05.pdf
 uid: 59a39b08-3dc3-501a-8e75-7bd16e46d6bc
