--- a/content/resources/mit6_011s10_chap11.md
+++ b/content/resources/mit6_011s10_chap11.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
+parent_uid: acd6b33e-f9a8-3af7-53fb-5db7d566d89a
 resourcetype: Document
 title: MIT6_011S10_chap11.pdf
 uid: f135b328-c744-8bf2-1c49-39ea9ff8f8fb
