--- a/content/resources/mit6_011s10_quiz02.md
+++ b/content/resources/mit6_011s10_quiz02.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Exams
 parent_type: CourseSection
+parent_uid: 8448f15c-9340-38fc-fa38-5866d016374d
 resourcetype: Document
 title: MIT6_011S10_quiz02.pdf
 uid: f011879b-6b76-d8e7-cdd9-c26ab62029ae
