Sync all content

--- a/content/resources/6-011s10-th.md
+++ b/content/resources/6-011s10-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2fce7b943f78374b49bb5287be4d211e_6-011s10-th.jpg
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2fce7b943f78374b49bb5287be4d211e_6-011s10-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Spectral shaping of a white-noise signal. (Image by MIT OpenCourseWare.
@@ -14,3 +14,5 @@ resourcetype: Image
 title: 6-011s10-th.jpg
 uid: 2fce7b94-3f78-374b-49bb-5287be4d211e
 ---
+New image Upload
+
