--- a/content/resources/6-011s10.md
+++ b/content/resources/6-011s10.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Spectral shaping of a white-noise signal. (Image by MIT OpenCourseWare.
   Courtesy of Prof. Alan Oppenheim and Prof. George Verghese.)
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/71dc6a1ff7031f948e77129cdf323942_6-011s10.jpg
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/71dc6a1ff7031f948e77129cdf323942_6-011s10.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Spectral shaping of a white-noise signal. (Image by MIT OpenCourseWare.
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 6-011s10.jpg
 uid: 71dc6a1f-f703-1f94-8e77-129cdf323942
 ---
+Spectral shaping of a white-noise signal. (Image by MIT OpenCourseWare. Courtesy of Prof. Alan Oppenheim and Prof. George Verghese.)
+
