--- a/content/resources/mit6_011s10_chap02.md
+++ b/content/resources/mit6_011s10_chap02.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about signals and systems.
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/4599f6cff8a3890477f4c4986db032a2_MIT6_011S10_chap02.pdf
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/4599f6cff8a3890477f4c4986db032a2_MIT6_011S10_chap02.pdf
 file_type: application/pdf
 learning_resource_types:
 - Readings
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT6_011S10_chap02.pdf
 uid: 4599f6cf-f8a3-8904-77f4-c4986db032a2
 ---
+This resource contains information about signals and systems.
+
