--- a/content/resources/mit6_011s10_chap06.md
+++ b/content/resources/mit6_011s10_chap06.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about state observers and state feedback.
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/205766623e6e6edc42f9b6d129f18d30_MIT6_011S10_chap06.pdf
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/205766623e6e6edc42f9b6d129f18d30_MIT6_011S10_chap06.pdf
 file_type: application/pdf
 learning_resource_types:
 - Readings
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT6_011S10_chap06.pdf
 uid: 20576662-3e6e-6edc-42f9-b6d129f18d30
 ---
+This resource contains information about state observers and state feedback.
+
