--- a/content/resources/mit6_011s10_chap07.md
+++ b/content/resources/mit6_011s10_chap07.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about probabilistic models.
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2c4e0564a2b319954d3fca9c118abd60_MIT6_011S10_chap07.pdf
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2c4e0564a2b319954d3fca9c118abd60_MIT6_011S10_chap07.pdf
 file_type: application/pdf
 learning_resource_types:
 - Readings
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT6_011S10_chap07.pdf
 uid: 2c4e0564-a2b3-1995-4d3f-ca9c118abd60
 ---
+This resource contains information about probabilistic models.
+
