--- a/content/resources/mit6_011s10_chap09.md
+++ b/content/resources/mit6_011s10_chap09.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about random processes.
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f240d88581626352c6a17eb2872504aa_MIT6_011S10_chap09.pdf
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f240d88581626352c6a17eb2872504aa_MIT6_011S10_chap09.pdf
 file_type: application/pdf
 learning_resource_types:
 - Readings
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT6_011S10_chap09.pdf
 uid: f240d885-8162-6352-c6a1-7eb2872504aa
 ---
+This resource contains information about random processes.
+
