--- a/content/resources/mit6_011s10_chap13.md
+++ b/content/resources/mit6_011s10_chap13.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about hypothesis testing.
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/a28fcd60540c02d8f9040e97cf58c151_MIT6_011S10_chap13.pdf
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/a28fcd60540c02d8f9040e97cf58c151_MIT6_011S10_chap13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Readings
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT6_011S10_chap13.pdf
 uid: a28fcd60-540c-02d8-f904-0e97cf58c151
 ---
+This resource contains information about hypothesis testing.
+
