--- a/content/resources/mit6_011s10_chap14.md
+++ b/content/resources/mit6_011s10_chap14.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about signal detection.
-file: /media/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/61ec3ac814f18a1f05b4ce0c90e89282_MIT6_011S10_chap14.pdf
+file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/61ec3ac814f18a1f05b4ce0c90e89282_MIT6_011S10_chap14.pdf
 file_type: application/pdf
 learning_resource_types:
 - Readings
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT6_011S10_chap14.pdf
 uid: 61ec3ac8-14f1-8a1f-05b4-ce0c90e89282
 ---
+This resource contains information about signal detection.
+
