Sync all content

--- a/content/resources/6-011s10.md
+++ b/content/resources/6-011s10.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: 'An illustration of spectral shaping of a white-noise signal. '
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-011s10.jpg
 uid: 71dc6a1f-f703-1f94-8e77-129cdf323942
 ---
 Spectral shaping of a white-noise signal. (Image by MIT OpenCourseWare. Courtesy of Prof. Alan Oppenheim and Prof. George Verghese.)
-
