--- a/content/resources/mit6_011s10_chap14.md
+++ b/content/resources/mit6_011s10_chap14.md
@@ -5,6 +5,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT6_011S10_chap14.pdf
 uid: 61ec3ac8-14f1-8a1f-05b4-ce0c90e89282
 ---
 This resource contains information about signal detection.
-
