--- a/content/resources/6-011s10-th.md
+++ b/content/resources/6-011s10-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: 'An illustration of spectral shaping of a white-noise signal. '
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-011s10-th.jpg
 uid: 2fce7b94-3f78-374b-49bb-5287be4d211e
 ---
 New image Upload
-
