--- a/content/resources/mit6_011s10_chap03.md
+++ b/content/resources/mit6_011s10_chap03.md
@@ -6,6 +6,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT6_011S10_chap03.pdf
 uid: 7fe9f08b-4f00-50ca-cf66-4236b2620e58
 ---
 This resource contains information about transform representation of signals and LTI systems.
-
