--- a/content/resources/mit6_011s10_chap05.md
+++ b/content/resources/mit6_011s10_chap05.md
@@ -6,6 +6,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT6_011S10_chap05.pdf
 uid: 59a39b08-3dc3-501a-8e75-7bd16e46d6bc
 ---
 This resource contains information about properties of LTI state-space models.
-
