--- a/content/resources/mit6_011s10_chap06.md
+++ b/content/resources/mit6_011s10_chap06.md
@@ -5,6 +5,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT6_011S10_chap06.pdf
 uid: 20576662-3e6e-6edc-42f9-b6d129f18d30
 ---
 This resource contains information about state observers and state feedback.
-
