--- a/content/resources/mit6_011s10_chap07.md
+++ b/content/resources/mit6_011s10_chap07.md
@@ -5,6 +5,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT6_011S10_chap07.pdf
 uid: 2c4e0564-a2b3-1995-4d3f-ca9c118abd60
 ---
 This resource contains information about probabilistic models.
-
