--- a/content/resources/mit6_011s10_chap08.md
+++ b/content/resources/mit6_011s10_chap08.md
@@ -6,6 +6,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT6_011S10_chap08.pdf
 uid: f3ed10bd-2a49-c9ec-2baf-3dddb5242862
 ---
 This resource contains information about estimation with minimum mean square error.
-
