--- a/content/resources/mit6_011s10_chap11.md
+++ b/content/resources/mit6_011s10_chap11.md
@@ -5,6 +5,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT6_011S10_chap11.pdf
 uid: f135b328-c744-8bf2-1c49-39ea9ff8f8fb
 ---
 This resource contains information about wiener filtering.
-
