--- a/content/resources/mit6_011s10_chap12.md
+++ b/content/resources/mit6_011s10_chap12.md
@@ -6,6 +6,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Readings
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Readings
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT6_011S10_chap12.pdf
 uid: d2df3fc9-0619-0f97-8ad6-66c9c63cdc5d
 ---
 This resource contains information about pulse amplitude modulation (PAM), quadrature amplitude modulation (QAM).
-
