--- a/content/resources/mit6_011s10_quiz02.md
+++ b/content/resources/mit6_011s10_quiz02.md
@@ -5,6 +5,7 @@ file: /courses/6-011-introduction-to-communication-control-and-signal-processing
 file_type: application/pdf
 learning_resource_types:
 - Exams
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Exams
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT6_011S10_quiz02.pdf
 uid: f011879b-6b76-d8e7-cdd9-c26ab62029ae
 ---
 This resource contains question booklet of quiz 2. 
-
