--- a/content/resources/6-011s10-th.md
+++ b/content/resources/6-011s10-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2fce7b943f78374b49bb5287be4d211e_6-011s10-th.jpg
+file_size: 5562
 file_type: image/jpeg
 image_metadata:
   caption: Spectral shaping of a white-noise signal. (Image by MIT OpenCourseWare.
