--- a/content/resources/mit6_011s10_chap04.md
+++ b/content/resources/mit6_011s10_chap04.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about state-space models.
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/0009cae26d5218d6ebae14297d111325_MIT6_011S10_chap04.pdf
+file_size: 453394
 file_type: application/pdf
 learning_resource_types:
 - Readings
