--- a/content/resources/mit6_011s10_chap09.md
+++ b/content/resources/mit6_011s10_chap09.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about random processes.
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f240d88581626352c6a17eb2872504aa_MIT6_011S10_chap09.pdf
+file_size: 459514
 file_type: application/pdf
 learning_resource_types:
 - Readings
