--- a/content/resources/mit6_011s10_chap11.md
+++ b/content/resources/mit6_011s10_chap11.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about wiener filtering.
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/f135b328c7448bf21c4939ea9ff8f8fb_MIT6_011S10_chap11.pdf
+file_size: 424846
 file_type: application/pdf
 learning_resource_types:
 - Readings
