--- a/content/resources/mit6_011s10_chap12.md
+++ b/content/resources/mit6_011s10_chap12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information about pulse amplitude modulation (PAM),
   quadrature amplitude modulation (QAM).
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/d2df3fc906190f978ad666c9c63cdc5d_MIT6_011S10_chap12.pdf
+file_size: 425826
 file_type: application/pdf
 learning_resource_types:
 - Readings
