--- a/content/resources/mit6_011s10_chap13.md
+++ b/content/resources/mit6_011s10_chap13.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about hypothesis testing.
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/a28fcd60540c02d8f9040e97cf58c151_MIT6_011S10_chap13.pdf
+file_size: 412393
 file_type: application/pdf
 learning_resource_types:
 - Readings
