--- a/content/resources/mit6_011s10_quiz01.md
+++ b/content/resources/mit6_011s10_quiz01.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contains question booklet of quiz 1. '
 file: /courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/2e3078bdd580246ce1ea9401e721ff88_MIT6_011S10_quiz01.pdf
+file_size: 168849
 file_type: application/pdf
 learning_resource_types:
 - Exams
